Add stub duet private inference

--- a/examples/secure-multi-party-computation/Duet/Inference/DataOwner_1.ipynb
+++ b/examples/secure-multi-party-computation/Duet/Inference/DataOwner_1.ipynb
@@ -4,18 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MPC Tensor - Alice\n",
-    "### With Duet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this tutorial we will show you how to perform secure multiparty computation with data you cannot see. There are three /notebooks:\n",
-    "* [POC-MPCTensor-Duet-Alice](POC-MPCTensor-Duet-Alice.ipynb) (this notebook).  Alice will store data in his Duet server and will be available for the data-scientist.\n",
-    "* [POC-MPCTensor-Duet-Bob](POC-MPCTensor-Duet-Bob.ipynb).  Bob will store data in his Duet server and will be available for the data-scientist.\n",
-    "* [POC-MPCTensor-Duet-DS](POC-MPCTensor-Duet-DS.ipynb). The data-scientist will be the responsible of perform any secure computation.\n"
+    "<img src=\"https://github.com/OpenMined/design-assets/raw/master/logos/OM/horizontal-primary-light.png\" alt=\"he-black-box\" width=\"600\"/>\n",
+    "\n",
+    "\n",
+    "# Secure Multi Party Computation: Data Scientist\n",
+    "## Private Inference Image Evaluation\n",
+    "\n",
+    "\n",
+    "Welcome!\n",
+    "This tutorial will show you how to evaluate Encrypted images using Duet and SyMPC. This notebook illustrates the Data Owner view on the operations."
    ]
   },
   {
@@ -29,28 +26,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import main libraries"
+    "Let's import the main libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import syft as sy"
+    "import torch  #  tensor computation\n",
+    "import syft as sy  # core library for remote execution\n",
+    "\n",
+    "sy.load_lib(\"sympc\")  # openmined library which helps to perform mpc (see https://github.com/OpenMined/SyMPC)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Launch a Duet Server"
+    "## 1 - Duet Server and connection to Data Owner (Party 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this step let's launch a Duet server and connect to the Data Owner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 -  Launch a Duet Server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start Duet local instance\n",
+    "duet = sy.launch_duet(loopback=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 - Connect to Data Owner (Party 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎤  🎸  ♪♪♪ Starting Duet ♫♫♫  🎻  🎹\n",
+      "🎤  🎸  ♪♪♪ Joining Duet ♫♫♫  🎻  🎹\n",
       "\n",
       "♫♫♫ >\u001b[93m DISCLAIMER\u001b[0m:\u001b[1m Duet is an experimental feature currently in beta.\n",
       "♫♫♫ >             Use at your own risk.\n",
@@ -85,70 +116,59 @@
       "♫♫♫ > http://ec2-18-216-8-163.us-east-2.compute.amazonaws.com:5000\n",
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
-      "♫♫♫ > Duet Server ID: \u001b[1mf6c13409f9336891b26d6be3c23a09c5\u001b[0m\n",
+      "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the following Duet Client ID to your duet partner!\n",
+      "♫♫♫ > Duet Client ID: \u001b[1mf1bad9346d605b6feb6e34daa830257d\u001b[0m\n",
       "\n",
-      "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the following code to your Duet Partner!\n",
+      "♫♫♫ > ...waiting for partner to connect...\n",
       "\n",
-      "import syft as sy\n",
-      "duet = sy.duet(\"\u001b[1mf6c13409f9336891b26d6be3c23a09c5\u001b[0m\")\n",
-      "\n",
-      "♫♫♫ > \u001b[95mSTEP 2:\u001b[0m Have your duet partner send their Client ID to you and enter it below!\n",
-      "♫♫♫ > Duet Partner's Client ID: dd09c34d379f5b047b8f14e7bcdf1bc6\n",
-      "\n",
-      "♫♫♫ > Connecting...\n",
-      "\n",
-      "♫♫♫ > \u001b[92mCONNECTED!\u001b[0m\n",
-      "\n",
-      "♫♫♫ > DUET LIVE STATUS  *  Objects: 7  Requests: 0   Messages: 109                                                         "
+      "♫♫♫ > \u001b[92mCONNECTED!\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "duet = sy.launch_duet()"
+    "duet_p2 = sy.join_duet(\"341f4a9c6b78b0c8a4cc5e86e7af02e0\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 - Secret Data"
+    "If you see a green message saying CONNECTED!, that means that everything was ok, go back to [POC-MPCTensor-Duet-Party2-DO](POC-MPCTensor-Duet-Party2-DO.ipynb) and complete the tutorial."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's publish some data of interest."
+    "## 2 - Secure MultiParty Computation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch"
+    "### 2.1 Create a session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before doing any computation we need to setup a session. The session is used to send some config information only once between the parties.\n",
+    "This information can be:\n",
+    "* the ring size in which we do the computation\n",
+    "* the precision and base\n",
+    "* the approximation methods we are using for different functions (TODO)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<syft.proxy.torch.TensorPointer at 0x7f2ccc30e610>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = torch.tensor([50])\n",
-    "x.send(duet, pointable=True, tags=[\"#test_tensor_1\"], description= \"Dummy tensor to test the sum of tensors\")"
+    "from sympc.session import Session\n",
+    "from sympc.tensor import MPCTensor"
    ]
   },
   {
@@ -157,54 +177,233 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<syft.proxy.torch.TensorPointer at 0x7f2cc6611a00>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sympc.session.session.Session object at 0x7ff150876400>\n"
+     ]
     }
    ],
    "source": [
-    "x = torch.tensor([[1,2],[3,4]])\n",
-    "x.send(duet, pointable=True, tags=[\"#test_tensor_2\"], description= \"Dummy tensor to test the matmul of tensors\")"
+    "session = Session(parties=[duet_p1, duet_p2])\n",
+    "print(session)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Automate request response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the data owner instead of handling the requests manually, he will accept the request of type `reconstruct` automatically."
+    "### 2.2 Send the session to all the parties"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "Session.setup_mpc(session)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Private Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are ready to perform private operations. First of all let's check which datasets are stored in the Data Owner Duet server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Tags</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;UID: e89226117f7b4ca6885bbd0803f9df9f&gt;</td>\n",
+       "      <td>[#test_tensor_1]</td>\n",
+       "      <td>Dummy tensor to test the sum of tensors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>&lt;UID: 45552b85c2774ee29c618005784163ae&gt;</td>\n",
+       "      <td>[#test_tensor_2]</td>\n",
+       "      <td>Dummy tensor to test the matmul of tensors</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        ID              Tags  \\\n",
+       "0  <UID: e89226117f7b4ca6885bbd0803f9df9f>  [#test_tensor_1]   \n",
+       "1  <UID: 45552b85c2774ee29c618005784163ae>  [#test_tensor_2]   \n",
+       "\n",
+       "                                  Description  \n",
+       "0     Dummy tensor to test the sum of tensors  \n",
+       "1  Dummy tensor to test the matmul of tensors  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duet_p2.store.pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.1 - Sum, Substract and Multiply operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first do some basic operations. Notice that the difference here is that these operations are performed via SMPC, so the raw data is not leaving the data owner server!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_secret = duet_p2.store[0]  # secret data to test sum, substract and multiply\n",
+    "y = torch.Tensor([-5, 0, 1, 2, 3])  # some local data\n",
+    "x = MPCTensor(secret=x_secret, shape=(1,), session=session)  # MPC Tensor from x_secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "♫♫♫ > DUET LIVE STATUS  -  Objects: 2  Requests: 0   Messages: 3                                "
+      "X + Y = tensor([45., 50., 51., 52., 53.])\n"
      ]
     }
    ],
    "source": [
-    "duet.requests.add_handler(\n",
-    "    name=\"reconstruct\",\n",
-    "    action=\"accept\"\n",
-    ")"
+    "print(\"X + Y =\", (x + y).reconstruct())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X - Y = tensor([55., 50., 49., 48., 47.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X - Y =\", (x - y).reconstruct())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X * Y = tensor([-250.,    0.,   50.,  100.,  150.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X * Y =\", (x * y).reconstruct())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.2 - Matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bit more complex operations such as matrix multiplications are valid as well. \n",
+    "Remember that linear algebra is the basis of Deep Learning!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_secret = duet_p2.store[1]  # secret data with no access\n",
+    "x = MPCTensor(secret=x_secret, shape=(2,2), session=session)  # MPC Tensor build from x_secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X @ X =\n",
+      " tensor([[ 7., 10.],\n",
+      "        [15., 22.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X @ X =\\n\", (x @ x).reconstruct())"
    ]
   },
   {
