--- a/examples/secure-multi-party-computation/Duet/Inference/DataScientist.ipynb
+++ b/examples/secure-multi-party-computation/Duet/Inference/DataScientist.ipynb
@@ -4,18 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MPC Tensor\n",
-    "### With Duet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this tutorial we will show you how to perform secure multiparty computation with data you cannot see. There are three /notebooks:\n",
-    "* [POC-MPCTensor-Duet-Alice](POC-MPCTensor-Duet-Alice.ipynb). Alice will store data in his Duet server and will be available for the data-scientist.\n",
-    "* [POC-MPCTensor-Duet-Bob](POC-MPCTensor-Duet-Bob.ipynb).  Bob will store data in his Duet server and will be available for the data-scientist.\n",
-    "* [POC-MPCTensor-Duet-DS](POC-MPCTensor-Duet-DS.ipynb) (this notebook). The data-scientist will be the responsible of perform any secure computation."
+    "<img src=\"https://github.com/OpenMined/design-assets/raw/master/logos/OM/horizontal-primary-light.png\" alt=\"he-black-box\" width=\"600\"/>\n",
+    "\n",
+    "\n",
+    "# Secure Multi Party Computation: Data Scientist\n",
+    "## Private Inference Image Evaluation\n",
+    "\n",
+    "\n",
+    "Welcome!\n",
+    "This tutorial will show you how to evaluate Encrypted images using Duet and SyMPC. This notebook illustrates the Data Scientist view on the operations."
    ]
   },
   {
@@ -29,30 +26,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import main libraries"
+    "Let's import the main libraries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "libshm.so: cannot open shared object file: No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-77491242f50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m  \u001b[0;31m#  tensor computation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msyft\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msy\u001b[0m  \u001b[0;31m# core library for remote execution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_lib\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sympc\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# openmined library which helps to perform mpc (see https://github.com/OpenMined/SyMPC)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msink\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"./example.log\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/torch/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0m_dl_flags\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m __all__ += [name for name in dir(_C)\n",
+      "\u001b[0;31mImportError\u001b[0m: libshm.so: cannot open shared object file: No such file or directory"
+     ]
+    }
+   ],
    "source": [
-    "import syft as sy"
+    "import torch  #  tensor computation\n",
+    "import syft as sy  # core library for remote execution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Connect to the Data owners"
+    "## 1 - Duet Server and connection to Data Owner (Party 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 - Connect to Alice"
+    "In this step let's launch a Duet server and connect to the Data Owner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 -  Launch a Duet Server"
    ]
   },
   {
@@ -79,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🎤  🎸  ♪♪♪ Joining Duet ♫♫♫  🎻  🎹\n",
+      "🎤  🎸  ♪♪♪ Starting Duet ♫♫♫  🎻  🎹\n",
       "\n",
       "♫♫♫ >\u001b[93m DISCLAIMER\u001b[0m:\u001b[1m Duet is an experimental feature currently in beta.\n",
       "♫♫♫ >             Use at your own risk.\n",
@@ -92,24 +110,33 @@
       "♫♫♫ > http://ec2-18-216-8-163.us-east-2.compute.amazonaws.com:5000\n",
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
-      "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the following Duet Client ID to your duet partner!\n",
-      "♫♫♫ > Duet Client ID: \u001b[1mdd09c34d379f5b047b8f14e7bcdf1bc6\u001b[0m\n",
+      "♫♫♫ > Duet Server ID: \u001b[1m003b50cedc695ad9ae18c3cd6b3ad80a\u001b[0m\n",
       "\n",
-      "♫♫♫ > ...waiting for partner to connect...\n",
+      "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the following code to your Duet Partner!\n",
       "\n",
-      "♫♫♫ > \u001b[92mCONNECTED!\u001b[0m\n"
+      "import syft as sy\n",
+      "duet = sy.duet(\"\u001b[1m003b50cedc695ad9ae18c3cd6b3ad80a\u001b[0m\")\n",
+      "\n",
+      "♫♫♫ > \u001b[95mSTEP 2:\u001b[0m Have your duet partner send their Client ID to you and enter it below!\n",
+      "♫♫♫ > Duet Partner's Client ID: d1003a066208c22572c182797be5b608\n",
+      "\n",
+      "♫♫♫ > Connecting...\n",
+      "\n",
+      "♫♫♫ > \u001b[92mCONNECTED!\u001b[0m\n",
+      "\n",
+      "♫♫♫ > DUET LIVE STATUS  -  Objects: 3  Requests: 0   Messages: 63                                 "
      ]
     }
    ],
    "source": [
-    "duet_alice = sy.join_duet(\"f6c13409f9336891b26d6be3c23a09c5\")"
+    "duet_p1 = sy.join_duet(\"341f4a9c6b78b0c8a4cc5e86e7af02e0\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 - Connect to Bob"
+    "### 1.2 - Connect to Data Owner (Party 2)"
    ]
   },
   {
@@ -150,7 +177,7 @@
       "♫♫♫ >\n",
       "♫♫♫ > ...waiting for response from OpenGrid Network... \u001b[92mDONE!\u001b[0m\n",
       "♫♫♫ > \u001b[95mSTEP 1:\u001b[0m Send the following Duet Client ID to your duet partner!\n",
-      "♫♫♫ > Duet Client ID: \u001b[1m74e7436efb9d200d447001573dbbdfc0\u001b[0m\n",
+      "♫♫♫ > Duet Client ID: \u001b[1mf1bad9346d605b6feb6e34daa830257d\u001b[0m\n",
       "\n",
       "♫♫♫ > ...waiting for partner to connect...\n",
       "\n",
@@ -159,7 +186,14 @@
     }
    ],
    "source": [
-    "duet_bob = sy.join_duet(\"637630d01b9e2217e1bd007933c7d3ed\")"
+    "duet_p2 = sy.join_duet(\"341f4a9c6b78b0c8a4cc5e86e7af02e0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you see a green message saying CONNECTED!, that means that everything was ok, go back to [POC-MPCTensor-Duet-Party2-DO](POC-MPCTensor-Duet-Party2-DO.ipynb) and complete the tutorial."
    ]
   },
   {
@@ -173,14 +207,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 - Create a session"
+    "### 2.1 Create a session"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The session is used to send some config information only once between the parties.\n",
+    "Before doing any computation we need to setup a session. The session is used to send some config information only once between the parties.\n",
     "This information can be:\n",
     "* the ring size in which we do the computation\n",
     "* the precision and base\n",
@@ -206,12 +240,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sympc.session.session.Session object at 0x7fea0e96b360>\n"
+      "<sympc.session.session.Session object at 0x7ff150876400>\n"
      ]
     }
    ],
    "source": [
-    "session = Session(parties=[duet_alice, duet_bob])\n",
+    "session = Session(parties=[duet_p1, duet_p2])\n",
     "print(session)"
    ]
   },
@@ -219,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 - Send the session to all the parties"
+    "### 2.2 Send the session to all the parties"
    ]
   },
   {
@@ -235,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 -  Private Operations"
+    "### 2.3 Private Operations"
    ]
   },
   {
@@ -279,13 +313,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>&lt;UID: cc125e11ae6a4519b06dca68f2bb3621&gt;</td>\n",
+       "      <td>&lt;UID: e89226117f7b4ca6885bbd0803f9df9f&gt;</td>\n",
        "      <td>[#test_tensor_1]</td>\n",
        "      <td>Dummy tensor to test the sum of tensors</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>&lt;UID: beed866f0a524b83a409dde1bb1534d6&gt;</td>\n",
+       "      <td>&lt;UID: 45552b85c2774ee29c618005784163ae&gt;</td>\n",
        "      <td>[#test_tensor_2]</td>\n",
        "      <td>Dummy tensor to test the matmul of tensors</td>\n",
        "    </tr>\n",
@@ -295,8 +329,8 @@
       ],
       "text/plain": [
        "                                        ID              Tags  \\\n",
-       "0  <UID: cc125e11ae6a4519b06dca68f2bb3621>  [#test_tensor_1]   \n",
-       "1  <UID: beed866f0a524b83a409dde1bb1534d6>  [#test_tensor_2]   \n",
+       "0  <UID: e89226117f7b4ca6885bbd0803f9df9f>  [#test_tensor_1]   \n",
+       "1  <UID: 45552b85c2774ee29c618005784163ae>  [#test_tensor_2]   \n",
        "\n",
        "                                  Description  \n",
        "0     Dummy tensor to test the sum of tensors  \n",
@@ -309,74 +343,7 @@
     }
    ],
    "source": [
-    "duet_alice.store.pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Tags</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>&lt;UID: ab7c32aa50ec4c93a6fa8a7838d36ac0&gt;</td>\n",
-       "      <td>[#test_tensor_1]</td>\n",
-       "      <td>Dummy tensor to test the sum of tensors</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>&lt;UID: bde17c3bc32b43e3a667b69e1c622176&gt;</td>\n",
-       "      <td>[#test_tensor_2]</td>\n",
-       "      <td>Dummy tensor to test the matmul of tensors</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        ID              Tags  \\\n",
-       "0  <UID: ab7c32aa50ec4c93a6fa8a7838d36ac0>  [#test_tensor_1]   \n",
-       "1  <UID: bde17c3bc32b43e3a667b69e1c622176>  [#test_tensor_2]   \n",
-       "\n",
-       "                                  Description  \n",
-       "0     Dummy tensor to test the sum of tensors  \n",
-       "1  Dummy tensor to test the matmul of tensors  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "duet_bob.store.pandas"
+    "duet_p2.store.pandas"
    ]
   },
   {
@@ -395,22 +362,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_secret = duet_alice.store[0]  # secret data to test sum, substract and multiply\n",
-    "y_secret = duet_bob.store[0]"
+    "x_secret = duet_p2.store[0]  # secret data to test sum, substract and multiply\n",
+    "y = torch.Tensor([-5, 0, 1, 2, 3])  # some local data\n",
+    "x = MPCTensor(secret=x_secret, shape=(1,), session=session)  # MPC Tensor from x_secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X + Y = tensor([45., 50., 51., 52., 53.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X + Y =\", (x + y).reconstruct())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X - Y = tensor([55., 50., 49., 48., 47.])\n"
+     ]
+    }
+   ],
    "source": [
-    "x = MPCTensor(secret=x_secret, shape=(1,), session=session)  # MPC Tensor from x_secret\n",
-    "y = MPCTensor(secret=y_secret, shape=(1,), session=session)  # MPC Tensor from y_secret"
+    "print(\"X - Y =\", (x - y).reconstruct())"
    ]
   },
   {
@@ -422,16 +414,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Priv + Priv] X - Y = tensor([100.])\n",
-      "[Priv - Priv] X - Y = tensor([0.])\n",
-      "[Priv * Priv] X * Y = tensor([2500.])\n"
+      "X * Y = tensor([-250.,    0.,   50.,  100.,  150.])\n"
      ]
     }
    ],
    "source": [
-    "print(\"[Priv + Priv] X - Y =\", (x + y).reconstruct())\n",
-    "print(\"[Priv - Priv] X - Y =\", (x - y).reconstruct())\n",
-    "print(\"[Priv * Priv] X * Y =\", (x * y).reconstruct())"
+    "print(\"X * Y =\", (x * y).reconstruct())"
    ]
   },
   {
@@ -455,23 +443,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_secret = duet_alice.store[1]  # secret data to test matmul\n",
-    "y_secret = duet_bob.store[1]"
+    "x_secret = duet_p2.store[1]  # secret data with no access\n",
+    "x = MPCTensor(secret=x_secret, shape=(2,2), session=session)  # MPC Tensor build from x_secret"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = MPCTensor(secret=x_secret, shape=(2,2), session=session)  # MPC Tensor from x_secret\n",
-    "y = MPCTensor(secret=y_secret, shape=(2,2), session=session)  # MPC Tensor from y_secret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
